--- a/unite-overview/unite-overview.html
+++ b/unite-overview/unite-overview.html
@@ -37,22 +37,22 @@
                 <td><p style="margin:0 0 0 0;line-height: 8px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-dark-top.png" /></p></td>
               </tr>
               <tr>
-                <td style="background-color: #1f69b3; color: #ffffff; font-family: Helvetica Neue, Helvetica, Arial, sans-serif;">
+                <td style="background-color: #1f69b3; color: #ffffff; font-family: Helvetica, Trebuchet MS, Arial, sans-serif;">
                   <table style="border-spacing:0; border-collapse: collapse; padding: 0; margin: 10px 0 10px 0; width: 100%; vertical-align: top;">
                     <tr>
-                      <td><p style="text-align: center; font-size: 25px; line-height: 30px; color: #ffffff; margin: 0 0 0 0;">5</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 25px; line-height: 30px; color: #ffffff; margin: 0 0 0 0;">5</p></td>
                     </tr>
                     <tr>
-                      <td><p style="text-align: center; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;">Loans Closed</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;">Loans Closed</p></td>
                     </tr>
                     <tr>
-                      <td><p style="text-align: center; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-up-green.png" style="margin-right: 5px;" /> up 3</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-up-green.png" style="display:inline-block; padding-right: 5px;" />&nbsp;up 3</p></td>
                     </tr>
                   </table>
                 </td>
               </tr>
               <tr>
-                <td><p style="margin:0 0 0 0;line-height: 7px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-dark-bottom.png" /></p></td>
+                <td style="vertical-align: top;"><p style="margin:0 0 0 0;line-height: 7px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-dark-bottom.png" /></p></td>
               </tr>
             </table>
           </td>
@@ -63,22 +63,22 @@
                 <td><p style="margin:0 0 0 0;line-height: 8px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-light-top.png" /></p></td>
               </tr>
               <tr>
-                <td style="background-color: #82bdf8; color: #ffffff; font-family: Helvetica Neue, Helvetica, Arial, sans-serif;">
+                <td style="background-color: #82bdf8; color: #ffffff; font-family: Helvetica, Trebuchet MS, Arial, sans-serif;">
                   <table style="border-spacing:0; border-collapse: collapse; padding: 0; margin: 10px 0 10px 0; width: 100%; vertical-align: top;">
                     <tr>
-                      <td><p style="text-align: center; font-size: 25px; line-height: 30px; color: #ffffff; margin: 0 0 0 0;">$303,000</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 25px; line-height: 30px; color: #ffffff; margin: 0 0 0 0;">$303,000</p></td>
                     </tr>
                     <tr>
-                      <td><p style="text-align: center; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;">Avg Home Value</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;">Avg Home Value</p></td>
                     </tr>
                     <tr>
-                      <td><p style="text-align: center; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-up-orange.png" style="margin-right: 5px;" /> up $3,000</p></td>
+                      <td><p style="text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; line-height: 15px; color: #ffffff; margin: 0 0 0 0;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-up-orange.png" style="display:inline-block; padding-right: 5px;" />&nbsp;up $3,000</p></td>
                     </tr>
                   </table>
                 </td>
               </tr>
               <tr>
-                <td><p style="margin:0 0 0 0;line-height: 7px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-light-bottom.png" /></p></td>
+                <td style="vertical-align: top;"><p style="margin:0 0 0 0;line-height: 7px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/box-light-bottom.png" /></p></td>
               </tr>
             </table>
           </td>
@@ -91,57 +91,51 @@
   <!-- Client Details -->
   <tr>
     <td style="padding: 0 10px 15px 10px;">
-      <h4 style="color: #9ec258; font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 23px; font-weight: normal; margin: 15px 0 5px 0;">Josh Strzalko</h4>
-      <table style="border-spacing:0; border-collapse: collapse; border: 1px solid #bbbcbc; padding: 0 0 15px 0; margin: 0 0 0 0; width: 580px;" cellpadding="0" cellspacing="0">
+      <h4 style="color: #9ec258; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 23px; font-weight: normal; margin: 15px 0 5px 0;">Josh Strzalko</h4>
+      <table style="border: 1px solid #bbbcbc; padding: 0 0 0 0; margin: 0 0 15px 0; width: 580px;" cellpadding="0" cellspacing="0">
         <tr>
           <td colspan="7" style="background-color: #edeeee; padding: 0 0 0 0;">
-            <h5 style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; font-weight: normal; color: #004c97; margin: 8px 0 8px 10px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-home.png" style="margin-right: 5px;" /> 4234 Heirloom Rose Pl, Oviedo, FL 32766</h5>
+            <h5 style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; font-weight: normal; color: #004c97; margin: 8px 0 8px 10px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-overview/images/icon-home.png" style="padding-right: 5px; display: inline-block;" />&nbsp;1600 Pennsylvania Ave NW, Washington, DC 20006</h5>
           </td>
         </tr>
         <tr>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0; width: 80px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">HOME VALUE</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0; width: 110px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 10px;">ORIGINAL APPRAISED VALUE</p>
           </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 73px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">% INCREASE</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0; width: 110px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">CURRENT HOME VALUE ESTIMATE</p>
           </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 81px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">HOME EQUITY</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 90px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">HOME EQUITY</p>
           </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 84px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">% INCREASE</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 90px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">MORTGAGE BALANCE</p>
           </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 86px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">MORTGAGE BALANCE</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 90px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">MORTGAGE INTEREST RATE</p>
           </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 96px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">MORTGAGE INTEREST RATE</p>
-          </td>
-          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 70px;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 0 10px 0;">CURRENT RATE</p>
+          <td style="vertical-align: top; padding: 0 0 0 0; margin: 0 0 0 0;  width: 90px;">
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; color: #888b8d; text-align: center; padding: 0 0 0 0; margin: 10px 10px 10px 0;">CURRENT RATE</p>
           </td>
         </tr>
         <tr>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$545,411</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 10px;">$545,411</p>
           </td>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #9ec258; text-align: center; margin: 0 0 0 0;">-5.5%</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$545,411</p>
           </td>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$43,000</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$43,000</p>
           </td>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #9ec258; text-align: center; margin: 0 0 0 0;">+12.5%</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$250,000</p>
           </td>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">$250,000</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">3.5%</p>
           </td>
           <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">3.5%</p>
-          </td>
-          <td style="margin: 0 0 0 0; padding: 0 0 10px 0; vertical-align: top;">
-            <p style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 0 0 0;">3.4%</p>
+            <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #000000; text-align: center; margin: 0 10px 0 0;">3.4%</p>
           </td>
         </tr>
       </table>
