--- a/unite-desktop/index.html
+++ b/unite-desktop/index.html
@@ -20,10 +20,10 @@
     </td>
   </tr>
   <tr>
-    <td>
-      <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 10px 0 10px 0; padding: 20px 0 10px 0;">
+    <td style="padding: 10px 0 10px 0;">
+      <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0; padding: 0;">
         <tr>
-          <td style="width: 135px; padding: 0 5px 0 25px; border-collapse: collapse; vertical-align: top;">
+          <td style="width: 135px; padding: 0 5px; border-collapse: collapse; vertical-align: top;">
             <table style="width: 100%; border-collapse: collapse;">
               <tr>
                 <td style="padding: 0 0 5px 0;">
@@ -75,50 +75,22 @@
     <td style="background-color: #eff0f4;">
       <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0 auto;">
         <tr>
-          <td style="padding: 30px 0 60px 0;">
+          <td style="padding: 30px 0 20px 0; text-align: center;">
             <table style="border-collapse: collapse; width: 580px;">
               <tr>
-                <td style="width: 50%; padding: 20px 10px 5px 30px; border-right: 1px solid #595d61">
-                  <table style="width: 100%; border-collapse: collapse;">
-                    <tr>
-                      <td>
-                        <p style="margin: 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 16px; color: #58616B;"><img alt="" src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-estimate-value.png" style="text-decoration:none;padding-right:5px;display: inline-block;" /> Current Home Value Estimate</p>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p style="margin: 0; color: #96BC6D; font-size: 50px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif;">$538,105</p>
-                      </td>
-                    </tr>
-                  </table>
+                <td style="width: 30%;"></td>
+                <td style="width: 40%;">
+                  <p style="margin: 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 16px; color: #58616B; text-align: left;"><img alt="" src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-estimate-equity.png" style="text-decoration:none; padding-right:5px;display: inline-block; width: 22px; height: auto;" />Original Appraised Value</p>
+                  <p style="margin: 0; color: #96BC6D; font-size: 50px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; text-align: left;">$120,105</p>
                 </td>
-
-                <td style="width: 50%; padding: 20px 0 5px 10px;">
-                  <table style="width: 100%; border-collapse: collapse;" cellspacing="0" cellpadding="0">
-                    <tr>
-                      <td>
-                        <p style="margin: 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 16px; color: #58616B; text-align: left;"><img alt="" src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-estimate-equity.png" style="text-decoration:none; padding-right:5px;display: inline-block;" /> Original Appraised Value</p>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <p style="margin: 0; color: #96BC6D; font-size: 50px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; text-align: left;">$120,105</p>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
+                <td style="width: 30%;"></td>
               </tr>
             </table>
           </td>
         </tr>
         <tr>
-          <td style="text-align: center;">
+          <td style="text-align: center; padding-bottom: 30px;">
             <p style="margin: 0;"><a href="#" style="border: 0; display: inline-block; margin: 0 auto;"><img alt="" src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/btn-report.png" style="display: block; border: 0;" /></a></p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <p style="margin: 20px 0 20px 0; padding: 0 0 0 0; text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 11px; color: #9c9c9c;">These estimates are created using public data; for a professional valuation, contact your loan officer.</p>
           </td>
         </tr>
       </table>
@@ -130,7 +102,7 @@
 <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0 auto;">
   <tr>
     <td style="padding: 20px 0 20px 0;">
-      <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0 auto;">
+      <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0 auto; padding: 0 0 50px 0;">
         <tr>
           <td style="line-height: 40px;">
             <h3 style="margin: 0 10px 20px 10px; padding: 10px 0 10px 0; letter-spacing: -2px; text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 40px; color: #58616B;">Your Mortgage* </h3>
@@ -227,7 +199,7 @@
             <table cellpadding="0" cellspacing="0" style="width: 100%; border-collapse: collapse;">
               <tr>
                 <td style="text-align: center;">
-                  <p style="margin: 0 0 10px 0;font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 12px; color: #9c9c9c;"><img src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-mortgage-disclaimer.png" style="display: inline-block; margin: 0 2px 0 0; vertical-align: middle;"> Get a breakdown of your principal and interest payments through the length of the loan.</p>
+                  <p style="margin: 0 0 10px 0;font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 12px; color: #9c9c9c;">Get a breakdown of your principal and interest payments through the length of the loan.</p>
                   <p style="margin: 20px 0 0 0;"><a href="#" style="border: 0;"><img src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/btn-amoritization.png" style="display:inline-block; margin: 0 auto 0 auto; text-align:center;"></a></p>
                 </td>
               </tr>
@@ -240,7 +212,7 @@
 </table>
 
 <!-- Recent sales -->
-<table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; text-align: center; margin: 0 auto 10px auto;">
+<table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; text-align: center; margin: 0 auto 0 auto; padding: 0 0 10px 0;">
   <tr>
     <td>
       <h3 style="margin: 0 10px 20px 10px; padding: 10px 0 10px 0; letter-spacing: -2px; text-align: center; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 40px; vertical-align: middle; color: #58616B; border-bottom: 1px solid #DEDEDE;">Recent home sales near you</h3>
@@ -250,10 +222,10 @@
     <td>
       <table cellpadding="0" cellspacing="0" style="width: 580px; margin: 0 auto 10px auto; text-align: left;">
         <tr>
-          <td style="width: 290px; border-right: 1px solid #f4f4f4">
+          <td style="width: 290px;">
             <p style="margin: 20px 0 20px 100px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-recent-map.png" style="display: inline-block; height: auto; width: 25px;"></p>
           </td>
-          <td style="width: 175px; border-right: 1px solid #f4f4f4">
+          <td style="width: 175px;">
             <p style="margin: 20px 0 20px 65px;"><img src="http://dev.eleet-tech.com/dcdemail/unite-desktop/images/icon-recent-calendar.png" style="display: inline-block; height: auto; width: 25px;"></p>
           </td>
           <td style="width: 150px;">
@@ -261,23 +233,23 @@
           </td>
         </tr>
         <tr>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 5px 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 5px 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
           <td><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #84A561;">$399,333</p></td>
         </tr>
         <tr>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 5px 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 5px 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
           <td><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #84A561;">$399,333</p></td>
         </tr>
         <tr>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 5px 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 5px 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
           <td><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #84A561;">$399,333</p></td>
         </tr>
         <tr>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
-          <td style="border-right: 1px solid #f4f4f4"><p style="margin: 0 0 5px 0; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #58616B;"><span style="font-size: 29px; vertical-align: sub;">&bull;</span> 294 Sea View Drive</p></td>
+          <td style="border-right: 1px solid #595d61;"><p style="margin: 0 0 5px 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 14px; color: #58616B;">Nov. 18, 2014</p></td>
           <td><p style="margin: 0 0 0 30px; font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 17px; color: #84A561;">$399,333</p></td>
         </tr>
       </table>
@@ -288,13 +260,14 @@
 <!-- Footer -->
 <table cellpadding="0" cellspacing="0" style="width: 580px; border-collapse: collapse; margin: 0 auto; background-color: #004c97; text-align: center;">
   <tr>
-    <td style="padding: 0 20px 0 20px;">
-      <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 9px; line-height: 1.3; text-decoration: underline; color: #fff; margin: 10px 0 10px 0;">Please note: It is not our intention to send email to anyone who doesn't want it. If you're not sure why you're getting this update, or no longer wish to receive it, get more info here, including our privacy policy and information on how to manage your subscription.</p>
-      <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 9px; line-height: 1.3; text-decoration: underline; color: #fff; margin: 10px 0 10px 0;">‘Current Balance’ and ‘Interest Paid This Year’ are estimates based off of an amortization schedule for your loan and may not reflect your actual current balance or interest paid. ‘Your Rate’ reflects the rate in place at the time you closed your loan and may not reflect your current rate.</p>
-      <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 9px;line-height: 1.3; text-decoration: underline; color: #fff; margin: 10px 0 10px 0;">30-Year Fixed-Rate Mortgage: The principal and interest payment on a $200,000, 30-year Fixed-Rate Loan at 4.875% and 80% loan-to-value (LTV) is $1,077 with 1.8 points due at closing. The Annual Percentage Rate (APR) is 5.0313%. The principal and interest payment does not include taxes and insurance premiums, which will result in a higher actual monthly payment.</p>
+    <td style="padding: 10px 20px 30px 20px;">
+      <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 9px; line-height: 1.3; text-decoration: underline; color: #fff; margin: 10px 0 10px 0;">The principal and interest payment on a $200,000 30-year Fixed-Rate Loan at 4.00% and 80% loan-to-value (LTV) is $954.84.  The Annual Percentage Rate (APR) is 4.121%.  The principal and interest payment does not include taxes and insurance premiums, which will result in a higher actual monthly payment. </p>
+      <p style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 9px; line-height: 1.3; text-decoration: underline; color: #fff; margin: 10px 0 10px 0;">State specific disclaimer from the Broker.</p>
     </td>
   </tr>
 </table>
+      <p style="margin: 20px 0 20px 0; text-align: center;">
+      <a style="font-family: Helvetica, Trebuchet MS, Arial, sans-serif; font-size: 10px; line-height: 1.3; text-decoration: underline; color: #b3b3b3;" href="">Unsubscribe</a></p>
       </center>
     </td>
   </tr>
